--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "tsc",
+    "clean": "rimraf dist",
+    "start": "npm run tsc",
     "postinstall": "typings install",
+    "prepublish": "npm run clean && npm run start",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings"
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "typescript": "^1.8.10",
-    "typings": "^1.3.2"
+    "typings": "^1.3.2",
+    "rimraf": "^2.3.4"
   }
 }
