#000 okan add back lodash to eliminate 'Actions must be plain objects.'

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "decorator"
   ],
   "dependencies": {
+    "lodash": "^4.15.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
