--- a/package.json
+++ b/package.json
@@ -1,57 +1,64 @@
 {
-  "name": "redux-ts",
-  "version": "1.1.4",
-  "description": "Utils to define redux reducer/action in typescript",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "*.md",
-    "dist",
-    "LICENSE",
-    "lib",
-    "src"
-  ],
-  "repository": "cimdalli/redux-ts",
-  "authors": [
-    "Okan Çetin"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "clean": "rimraf dist",
-    "start": "npm run tsc",
-    "postinstall": "typings install",
-    "prepublish": "npm run clean && npm run start",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
-  },
-  "tags": [
-    "react",
-    "redux",
-    "typesctipt",
-    "action",
-    "reducer",
-    "decorator"
-  ],
-  "keywords": [
-    "react",
-    "redux",
-    "typesctipt",
-    "action",
-    "reducer",
-    "decorator"
-  ],
-  "dependencies": {
-    "lodash": "^4.15.0",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "ts-helpers": "^1.1.1"
-  },
-  "devDependencies": {
-    "typescript": "^1.8.10",
-    "typings": "^1.3.2",
-    "rimraf": "^2.3.4"
-  }
+    "name": "redux-ts",
+    "version": "1.1.4",
+    "description": "Utils to define redux reducer/action in typescript",
+    "main": "./dist/redux-ts.js",
+    "typings": "./lib/src/index.d.ts",
+    "files": [
+        "*.md",
+        "dist",
+        "LICENSE",
+        "lib",
+        "src"
+    ],
+    "repository": "cimdalli/redux-ts",
+    "authors": [
+        "Okan Çetin"
+    ],
+    "license": "MIT",
+    "scripts": {
+        "clean": "rimraf dist lib",
+        "start": "npm run clean && npm run tsc",
+        "postinstall": "typings install",
+        "prepublish": "npm run start",
+        "tsc": "tsc",
+        "tsc:w": "tsc -w",
+        "typings": "typings"
+    },
+    "tags": [
+        "react",
+        "redux",
+        "typesctipt",
+        "action",
+        "reducer",
+        "decorator"
+    ],
+    "keywords": [
+        "react",
+        "redux",
+        "typesctipt",
+        "action",
+        "reducer",
+        "decorator"
+    ],
+    "dependencies": {
+        "lodash": "^4.15.0",
+        "react": "^15.2.1",
+        "react-dom": "^15.2.1",
+        "react-redux": "^4.4.5",
+        "redux": "^3.5.2",
+        "ts-helpers": "^1.1.1"
+    },
+    "devDependencies": {
+        "karma": "^1.2.0",
+        "rimraf": "^2.3.4",
+        "ts-loader": "^0.8.1",
+        "typescript": "^1.8.10",
+        "typings": "^1.3.2",
+        "webpack": "^1.12.14"
+    },
+    "peerDependencies": {
+        "react": "^0.14.0 || ^15.0.0-0",
+        "redux": "^2.0.0 || ^3.0.0"
+    }
 }
