--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,12 @@
         "module": "commonjs",
         "target": "es5",
         "declaration": true,
-        "declarationDir": "./lib/",
         "noImplicitAny": true,
         "noEmitHelpers": true,
         "experimentalDecorators": true
     },
-    "files": [
-        "./src/**/*.ts",
-        "./typings/index.d.ts"
+    "exclude": [
+        "node_modules",
+        "dist"
     ]
 }
