--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
         "noImplicitAny": true,
         "noEmitHelpers": true,
         "experimentalDecorators": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "lib"
+    ]
 }
