--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "postinstall": "typings install",
     "prepublish": "npm run clean  &&  npm run build  &&  npm run test",
     "test": "npm run build:test  &&  npm run test:run",
-    "test:run": "mocha ./lib/specs.js"
+    "test:run": "mocha --require source-map-support/register ./lib/specs.js"
   },
   "tags": [
     "react",
@@ -58,6 +58,7 @@
     "glob": "^7.0.6",
     "mocha": "^2.0.1",
     "rimraf": "^2.5.4",
+    "source-map-support": "^0.4.2",
     "typescript": "^1.8.10",
     "typings": "^1.3.3",
     "webpack": "^1.13.2",
