#000 okan adds react-component keyword to package.json

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "ts",
     "action",
     "reducer",
-    "async"
+    "async",
+    "react-component"
   ],
   "dependencies": {
     "react": "^15.3.1",
