--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-ts",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "lib/index.js",
   "typings": "lib/src/index.d.ts",
@@ -23,9 +23,8 @@
     "build:test": "cross-env NODE_ENV=test webpack --output-filename lib/specs.js",
     "clean": "rimraf dist lib",
     "build": "npm run build:dev  &&  npm run build:prod  &&  npm run build:prod:min",
-    "postinstall": "typings install",
     "prepublish": "npm run clean  &&  npm run build  &&  npm run test",
-    "test": "npm run build:test  &&  npm run test:run",
+    "test": "npm run clean  &&  npm run build:test  &&  npm run test:run",
     "test:run": "mocha --require source-map-support/register ./lib/specs.js"
   },
   "tags": [
@@ -55,15 +54,16 @@
     "ts-helpers": "^1.1.1"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "2.1.1",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.33",
     "chai": "^3.5.0",
     "cross-env": "^2.0.1",
     "glob": "^7.0.6",
     "mocha": "^2.0.1",
     "rimraf": "^2.5.4",
     "source-map-support": "^0.4.2",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.3",
+    "ts-loader": "^1.2.2",
+    "typescript": "^2.0.10",
     "webpack": "^1.13.2",
     "webpack-node-externals": "^1.3.3"
   },
