--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
         "target": "es5",
         "noImplicitAny": true,
         "noEmitHelpers": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "lib": ["dom", "es5", "es2015.promise", "es2015.core"]
     },
     "exclude": [
         "node_modules",
