--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-ts",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "lib/index.js",
   "typings": "lib/src/index.d.ts",
@@ -49,22 +49,21 @@
   "dependencies": {
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "ts-helpers": "^1.1.1"
+    "react-redux": "^5.0.3",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.33",
     "chai": "^3.5.0",
-    "cross-env": "^2.0.1",
+    "cross-env": "^3.2.4",
     "glob": "^7.0.6",
-    "mocha": "^2.0.1",
+    "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "source-map-support": "^0.4.2",
-    "ts-loader": "^1.2.2",
-    "typescript": "^2.0.10",
-    "webpack": "^1.13.2",
+    "ts-loader": "^2.0.1",
+    "typescript": "^2.2.1",
+    "webpack": "^2.2.1",
     "webpack-node-externals": "^1.3.3"
   },
   "peerDependencies": {
