--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-ts",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "lib/index.js",
   "typings": "lib/src/index.d.ts",
@@ -53,21 +53,25 @@
     "redux": "^3.5.2"
   },
   "devDependencies": {
-    "@types/chai": "^3.4.34",
+    "@types/chai": "^4.0.3",
     "@types/mocha": "^2.2.33",
-    "chai": "^3.5.0",
-    "cross-env": "^3.2.4",
+    "@types/react": "^15.0.30",
+    "@types/react-redux": "^5.0.1",
+    "chai": "^4.1.1",
+    "cross-env": "^5.0.5",
     "glob": "^7.0.6",
     "mocha": "^3.2.0",
     "rimraf": "^2.5.4",
     "source-map-support": "^0.4.2",
-    "ts-loader": "^2.0.1",
-    "typescript": "^2.2.1",
-    "webpack": "^2.2.1",
+    "ts-loader": "^2.1.0",
+    "typescript": "^2.3.4",
+    "webpack": "^3.5.3",
     "webpack-node-externals": "^1.3.3"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0-0",
-    "redux": "^2.0.0 || ^3.0.0"
+    "react": ">=15",
+    "react-dom": ">=15",
+    "react-redux": ">=5",
+    "redux": ">=3"
   }
 }
