--- a/package.json
+++ b/package.json
@@ -47,26 +47,29 @@
     "react-component"
   ],
   "dependencies": {
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^5.0.3",
-    "redux": "^3.5.2"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.3",
-    "@types/mocha": "^2.2.33",
-    "@types/react": "^15.0.30",
-    "@types/react-redux": "^5.0.1",
-    "chai": "^4.1.1",
-    "cross-env": "^5.0.5",
-    "glob": "^7.0.6",
-    "mocha": "^3.2.0",
-    "rimraf": "^2.5.4",
-    "source-map-support": "^0.4.2",
-    "ts-loader": "^2.1.0",
-    "typescript": "^2.3.4",
-    "webpack": "^3.5.3",
-    "webpack-node-externals": "^1.3.3"
+    "@types/chai": "^4.1.3",
+    "@types/mocha": "^5.2.0",
+    "@types/react": "^16.3.13",
+    "@types/react-redux": "^5.0.19",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.4",
+    "glob": "^7.1.2",
+    "mocha": "^5.1.1",
+    "prettier-tslint": "^0.4.0",
+    "rimraf": "^2.6.2",
+    "source-map-support": "^0.5.5",
+    "ts-loader": "^4.2.0",
+    "tslint-config-airbnb": "^5.8.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "peerDependencies": {
     "react": ">=15",
