--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "redux-ts",
   "version": "2.6.0",
   "description": "Utils to define redux reducer/action in typescript",
-  "main": "lib/index.js",
-  "typings": "lib/src/index.d.ts",
+  "main": "dist/redux-ts.min.js",
+  "typings": "dist/src/index.d.ts",
   "files": [
     "*.md",
     "dist",
@@ -17,15 +17,12 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build:dev": "cross-env NODE_ENV=dev webpack src/index.ts lib/index.js",
-    "build:prod": "cross-env NODE_ENV=prod webpack src/index.ts dist/redux-ts.js",
-    "build:prod:min": "cross-env NODE_ENV=prod webpack -p src/index.ts dist/redux-ts.min.js",
-    "build:test": "cross-env NODE_ENV=test webpack --output-filename lib/specs.js",
+    "build:dev": "webpack --config webpack.dev.js",
+    "build:prod": "webpack --config webpack.prod.js",
     "clean": "rimraf dist lib",
-    "build": "npm run build:dev  &&  npm run build:test  &&  npm run build:prod  &&  npm run build:prod:min",
-    "prepublish": "npm run clean  &&  npm run build  &&  npm run test:run",
-    "test": "npm run clean  &&  npm run build:test  &&  npm run test:run",
-    "test:run": "mocha --require source-map-support/register ./lib/specs.js"
+    "build": "npm run build:dev  &&  npm run build:prod",
+    "prepublish": "npm run clean  &&  npm run build  &&  npm run test",
+    "test": "mocha --require source-map-support/register --require ts-node/register **/*.spec.ts"
   },
   "tags": [
     "react",
@@ -58,17 +55,17 @@
     "@types/react": "^16.3.13",
     "@types/react-redux": "^5.0.19",
     "chai": "^4.1.2",
-    "cross-env": "^5.1.4",
-    "glob": "^7.1.2",
     "mocha": "^5.1.1",
     "prettier-tslint": "^0.4.0",
     "rimraf": "^2.6.2",
     "source-map-support": "^0.5.5",
     "ts-loader": "^4.2.0",
+    "ts-node": "^6.0.3",
     "tslint-config-airbnb": "^5.8.0",
     "typescript": "^2.8.3",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.3",
+    "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2"
   },
   "peerDependencies": {
