refactor project structure and async action logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,10 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
-        "noImplicitAny": true,
-        "experimentalDecorators": true,
-        "lib": ["dom", "es5", "es2015.promise", "es2015.core"]
-    },
-    "exclude": [
-        "node_modules",
-        "lib"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es5",
+    "noImplicitAny": true,
+    "experimentalDecorators": true,
+    "lib": ["dom", "es5", "es2015.promise", "es2015.core"]
+  },
+  "exclude": ["node_modules", "tests"]
 }
