--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-ts",
-  "version": "2.6.0",
+  "version": "3.0.0",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "dist/redux-ts.min.js",
   "typings": "dist/src/index.d.ts",
@@ -20,9 +20,9 @@
     "build:dev": "webpack --config webpack.dev.js",
     "build:prod": "webpack --config webpack.prod.js",
     "clean": "rimraf dist lib",
-    "build": "npm run build:dev  &&  npm run build:prod",
-    "prepublish": "npm run clean  &&  npm run build  &&  npm run test",
-    "test": "mocha --require source-map-support/register --require ts-node/register **/*.spec.ts"
+    "build": "npm run clean && npm run build:dev && npm run build:prod",
+    "prepublish": "npm run test && npm run build",
+    "test": "mocha --require source-map-support/register --require ts-node/register tests/**/*.spec.ts"
   },
   "tags": [
     "react",
