--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-ts",
-  "version": "4.1.3",
+  "version": "4.1.4",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "dist/redux-ts.production.min.js",
   "typings": "dist/src/index.d.ts",
@@ -73,5 +73,14 @@
     "react-dom": ">=15",
     "react-redux": ">=5",
     "redux": ">=4"
+  },
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": true
   }
 }
