--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "redux-ts",
-  "version": "4.1.8",
+  "version": "4.2.0-rc.2",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "dist/redux-ts.production.min.js",
-  "typings": "dist/src/index.d.ts",
+  "types": "lib/index.d.ts",
   "files": [
     "*.md",
     "dist",
