--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "outDir": "./lib",
     "lib": ["dom", "es5", "es2015.promise", "es2015.core"]
   },
-  "exclude": ["node_modules", "tests"]
+  "exclude": ["node_modules", "tests", "lib", "dist"]
 }
