--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "redux-ts",
-  "version": "4.1.8",
+  "version": "4.2.0-rc.7",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "dist/redux-ts.production.min.js",
-  "typings": "dist/src/index.d.ts",
+  "types": "lib/index.d.ts",
   "files": [
     "*.md",
     "dist",
@@ -62,7 +62,7 @@
     "ts-loader": "^5.3.2",
     "ts-node": "^7.0.1",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.2.2",
+    "typescript": "3.2.2",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-merge": "^4.1.5",
