--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "@types/react-redux": "^7.1.5",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
+    "prettier": "^1.19.1",
     "prettier-tslint": "^0.4.2",
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.16",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.0",
-    "tslint-config-airbnb": "^5.11.2",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
