--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-ts",
-  "version": "4.2.0-rc.7",
+  "version": "4.3.0",
   "description": "Utils to define redux reducer/action in typescript",
   "main": "dist/redux-ts.production.min.js",
   "types": "lib/index.d.ts",
